[gd_scene format=3 uid="uid://thp8wbec3d0y"]

[ext_resource type="Script" uid="uid://bor6p0uwwmnye" path="res://scripts/menus/intro_scene.gd" id="1_7osnm"]
[ext_resource type="Texture2D" uid="uid://b1fu3hg6rb8b0" path="res://resources/images/gui/background.png" id="2_hute1"]
[ext_resource type="Texture2D" uid="uid://dc357ryxg3lfn" path="res://resources/images/environment/environment_water/environment_water_00.png" id="3_ksi0f"]
[ext_resource type="Texture2D" uid="uid://c87c3jni05x0c" path="res://resources/images/environment/environment_water/environment_water_01.png" id="4_6opsr"]
[ext_resource type="Texture2D" uid="uid://7rpeaq0j74r8" path="res://resources/images/environment/environment_water/environment_water_02.png" id="5_lmu6w"]
[ext_resource type="Texture2D" uid="uid://gkivq0sbtah8" path="res://resources/images/environment/environment_water/environment_water_03.png" id="6_gfx5c"]
[ext_resource type="Texture2D" uid="uid://bvsvr0e0xhto0" path="res://resources/images/environment/environment_water/environment_water_04.png" id="7_qnpcj"]
[ext_resource type="Texture2D" uid="uid://dp2fdo2mmeugt" path="res://resources/images/environment/environment_water/environment_water_05.png" id="8_a70h0"]
[ext_resource type="Texture2D" uid="uid://jix338scescn" path="res://resources/images/environment/environment_water/environment_water_06.png" id="9_hbwmq"]
[ext_resource type="Texture2D" uid="uid://badwrsib1qp8v" path="res://resources/images/environment/environment_water/environment_water_07.png" id="10_dqinj"]
[ext_resource type="Texture2D" uid="uid://c4q20fg5fgmg7" path="res://resources/images/environment/environment_water/environment_water_08.png" id="11_l8xen"]
[ext_resource type="Texture2D" uid="uid://osh8ma62piqv" path="res://resources/images/environment/environment_water/environment_water_09.png" id="12_u68iv"]
[ext_resource type="Texture2D" uid="uid://cgloi2sxjs5rq" path="res://resources/images/environment/environment_water/environment_water_10.png" id="13_njq7a"]
[ext_resource type="Texture2D" uid="uid://do3pvvaku0l0k" path="res://resources/images/environment/environment_water/environment_water_11.png" id="14_ixisq"]
[ext_resource type="Texture2D" uid="uid://to7u2q5jp3nn" path="res://resources/images/environment/environment_water/environment_water_12.png" id="15_ccso3"]
[ext_resource type="Texture2D" uid="uid://b8hkveea4sdlh" path="res://resources/images/environment/environment_water/environment_water_13.png" id="16_vo17m"]
[ext_resource type="Texture2D" uid="uid://bbbaip2wmsg1i" path="res://resources/images/environment/environment_water/environment_water_14.png" id="17_gv083"]
[ext_resource type="Texture2D" uid="uid://i8x7rj2ds3to" path="res://resources/images/environment/environment_water/environment_water_15.png" id="18_nrfk2"]
[ext_resource type="Texture2D" uid="uid://b5xntjijsw3pt" path="res://resources/images/environment/environment_water/environment_water_16.png" id="19_igr3g"]
[ext_resource type="Texture2D" uid="uid://de5w084323md4" path="res://resources/images/environment/environment_water/environment_water_17.png" id="20_2g742"]
[ext_resource type="Texture2D" uid="uid://bbfefxdgfxkmt" path="res://resources/images/environment/environment_water/environment_water_18.png" id="21_31oqj"]
[ext_resource type="Texture2D" uid="uid://dpwbsxp050mp4" path="res://resources/images/environment/environment_water/environment_water_19.png" id="22_x1sbg"]
[ext_resource type="Texture2D" uid="uid://csi6n8nspb87w" path="res://resources/images/environment/environment_water/environment_water_20.png" id="23_g8f32"]
[ext_resource type="Texture2D" uid="uid://yikgxienpynk" path="res://resources/images/environment/environment_water/environment_water_21.png" id="24_3fswd"]
[ext_resource type="Texture2D" uid="uid://dr52cs3xylax5" path="res://resources/images/environment/environment_water/environment_water_22.png" id="25_d0xwr"]
[ext_resource type="Texture2D" uid="uid://k24r3y1hyeff" path="res://resources/images/environment/environment_water/environment_water_23.png" id="26_ke3v3"]
[ext_resource type="Texture2D" uid="uid://ckablle441dp8" path="res://resources/images/environment/environment_water/environment_water_24.png" id="27_gtbam"]
[ext_resource type="Texture2D" uid="uid://cjwjanit5r5cx" path="res://resources/images/environment/environment_water/environment_water_25.png" id="28_yh1js"]
[ext_resource type="Texture2D" uid="uid://btuvhxl8ioc0r" path="res://resources/images/environment/environment_water/environment_water_26.png" id="29_sy086"]
[ext_resource type="Texture2D" uid="uid://e2sjb05physm" path="res://resources/images/environment/environment_water/environment_water_27.png" id="30_rgd5l"]
[ext_resource type="Texture2D" uid="uid://chagf8a5na2do" path="res://resources/images/environment/environment_water/environment_water_28.png" id="31_0e5lq"]
[ext_resource type="Texture2D" uid="uid://djx6gfe76gd4b" path="res://resources/images/environment/environment_water/environment_water_29.png" id="32_l2w3s"]
[ext_resource type="Texture2D" uid="uid://c30kmxwnyub5l" path="res://resources/images/environment/environment_water/environment_water_30.png" id="33_bbfug"]
[ext_resource type="Texture2D" uid="uid://kfrhmj4f4bi2" path="res://resources/images/environment/environment_water/environment_water_31.png" id="34_q5i75"]
[ext_resource type="Texture2D" uid="uid://fdjce32qe0bc" path="res://resources/images/environment/environment_water/environment_water_32.png" id="35_wqyf3"]
[ext_resource type="Texture2D" uid="uid://bfdphabrvmbnf" path="res://resources/images/environment/environment_water/environment_water_33.png" id="36_8awh4"]
[ext_resource type="Texture2D" uid="uid://f5kvdmskp6rq" path="res://resources/images/environment/environment_water/environment_water_34.png" id="37_j1adt"]
[ext_resource type="Texture2D" uid="uid://c5rfqfy4yqtyj" path="res://resources/images/environment/environment_water/environment_water_35.png" id="38_drt0e"]
[ext_resource type="Texture2D" uid="uid://dm2lc757gipwg" path="res://resources/images/environment/environment_water/environment_water_36.png" id="39_02lc1"]
[ext_resource type="Texture2D" uid="uid://cvinqprx06adn" path="res://resources/images/environment/environment_water/environment_water_37.png" id="40_bnjpk"]
[ext_resource type="Texture2D" uid="uid://cv8hm82ekgr7j" path="res://resources/images/environment/environment_water/environment_water_38.png" id="41_papiw"]
[ext_resource type="Texture2D" uid="uid://ola75gkwrysm" path="res://resources/images/environment/environment_water/environment_water_39.png" id="42_b50ec"]
[ext_resource type="Texture2D" uid="uid://pwiqk05jawug" path="res://resources/images/environment/environment_water/environment_water_40.png" id="43_ii8r4"]
[ext_resource type="Texture2D" uid="uid://dueboqgtxcg6p" path="res://resources/images/environment/environment_water/environment_water_41.png" id="44_bdshg"]
[ext_resource type="Texture2D" uid="uid://kpvvts211hjh" path="res://resources/images/environment/environment_water/environment_water_42.png" id="45_hu748"]
[ext_resource type="Texture2D" uid="uid://ug8705383tue" path="res://resources/images/environment/environment_water/environment_water_43.png" id="46_xeu6b"]
[ext_resource type="Texture2D" uid="uid://bkhicwl7ys1mx" path="res://resources/images/environment/environment_water/environment_water_44.png" id="47_6fh4u"]
[ext_resource type="Texture2D" uid="uid://2dbj0wwyrkin" path="res://resources/images/environment/environment_water/environment_water_45.png" id="48_5t2tt"]
[ext_resource type="Texture2D" uid="uid://sn4wpbucii8i" path="res://resources/images/environment/environment_water/environment_water_46.png" id="49_12cxf"]
[ext_resource type="Texture2D" uid="uid://qugbqgw0nink" path="res://resources/images/environment/environment_water/environment_water_47.png" id="50_fpmop"]
[ext_resource type="Texture2D" uid="uid://cvxw4djwmx630" path="res://resources/images/environment/environment_water/environment_water_48.png" id="51_rmcxj"]
[ext_resource type="Texture2D" uid="uid://cxlgavwf2y3c4" path="res://resources/images/environment/environment_water/environment_water_49.png" id="52_xaxjq"]
[ext_resource type="Texture2D" uid="uid://dif6ayoquthvu" path="res://resources/images/environment/environment_water/environment_water_50.png" id="53_qv8ng"]
[ext_resource type="Texture2D" uid="uid://cd36alkbs1iwd" path="res://resources/images/environment/environment_water/environment_water_51.png" id="54_aglhv"]
[ext_resource type="Texture2D" uid="uid://uc32ji04r7uy" path="res://resources/images/environment/environment_water/environment_water_52.png" id="55_xpsfs"]
[ext_resource type="Texture2D" uid="uid://btcncyyl5akmu" path="res://resources/images/environment/environment_water/environment_water_53.png" id="56_4f6xx"]
[ext_resource type="Texture2D" uid="uid://didywbgsw4xtq" path="res://resources/images/environment/environment_water/environment_water_54.png" id="57_dtg0u"]
[ext_resource type="Texture2D" uid="uid://cdhtenav6fn42" path="res://resources/images/environment/environment_water/environment_water_55.png" id="58_kpcml"]
[ext_resource type="Texture2D" uid="uid://da4vpraadgfdy" path="res://resources/images/environment/environment_water/environment_water_56.png" id="59_pohy0"]
[ext_resource type="Texture2D" uid="uid://dn0ape2k1jn7t" path="res://resources/images/environment/environment_water/environment_water_57.png" id="60_mxevj"]
[ext_resource type="Texture2D" uid="uid://1jr8uiffumbp" path="res://resources/images/environment/environment_water/environment_water_58.png" id="61_vpwv6"]
[ext_resource type="Texture2D" uid="uid://ckxe7s3by514m" path="res://resources/images/environment/environment_water/environment_water_59.png" id="62_k4r55"]

[sub_resource type="SpriteFrames" id="SpriteFrames_c5sff"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_ksi0f")
}, {
"duration": 1.0,
"texture": ExtResource("4_6opsr")
}, {
"duration": 1.0,
"texture": ExtResource("5_lmu6w")
}, {
"duration": 1.0,
"texture": ExtResource("6_gfx5c")
}, {
"duration": 1.0,
"texture": ExtResource("7_qnpcj")
}, {
"duration": 1.0,
"texture": ExtResource("8_a70h0")
}, {
"duration": 1.0,
"texture": ExtResource("9_hbwmq")
}, {
"duration": 1.0,
"texture": ExtResource("10_dqinj")
}, {
"duration": 1.0,
"texture": ExtResource("11_l8xen")
}, {
"duration": 1.0,
"texture": ExtResource("12_u68iv")
}, {
"duration": 1.0,
"texture": ExtResource("13_njq7a")
}, {
"duration": 1.0,
"texture": ExtResource("14_ixisq")
}, {
"duration": 1.0,
"texture": ExtResource("15_ccso3")
}, {
"duration": 1.0,
"texture": ExtResource("16_vo17m")
}, {
"duration": 1.0,
"texture": ExtResource("17_gv083")
}, {
"duration": 1.0,
"texture": ExtResource("18_nrfk2")
}, {
"duration": 1.0,
"texture": ExtResource("19_igr3g")
}, {
"duration": 1.0,
"texture": ExtResource("20_2g742")
}, {
"duration": 1.0,
"texture": ExtResource("21_31oqj")
}, {
"duration": 1.0,
"texture": ExtResource("22_x1sbg")
}, {
"duration": 1.0,
"texture": ExtResource("23_g8f32")
}, {
"duration": 1.0,
"texture": ExtResource("24_3fswd")
}, {
"duration": 1.0,
"texture": ExtResource("25_d0xwr")
}, {
"duration": 1.0,
"texture": ExtResource("26_ke3v3")
}, {
"duration": 1.0,
"texture": ExtResource("27_gtbam")
}, {
"duration": 1.0,
"texture": ExtResource("28_yh1js")
}, {
"duration": 1.0,
"texture": ExtResource("29_sy086")
}, {
"duration": 1.0,
"texture": ExtResource("30_rgd5l")
}, {
"duration": 1.0,
"texture": ExtResource("31_0e5lq")
}, {
"duration": 1.0,
"texture": ExtResource("32_l2w3s")
}, {
"duration": 1.0,
"texture": ExtResource("33_bbfug")
}, {
"duration": 1.0,
"texture": ExtResource("34_q5i75")
}, {
"duration": 1.0,
"texture": ExtResource("35_wqyf3")
}, {
"duration": 1.0,
"texture": ExtResource("36_8awh4")
}, {
"duration": 1.0,
"texture": ExtResource("37_j1adt")
}, {
"duration": 1.0,
"texture": ExtResource("38_drt0e")
}, {
"duration": 1.0,
"texture": ExtResource("39_02lc1")
}, {
"duration": 1.0,
"texture": ExtResource("40_bnjpk")
}, {
"duration": 1.0,
"texture": ExtResource("41_papiw")
}, {
"duration": 1.0,
"texture": ExtResource("42_b50ec")
}, {
"duration": 1.0,
"texture": ExtResource("43_ii8r4")
}, {
"duration": 1.0,
"texture": ExtResource("44_bdshg")
}, {
"duration": 1.0,
"texture": ExtResource("45_hu748")
}, {
"duration": 1.0,
"texture": ExtResource("46_xeu6b")
}, {
"duration": 1.0,
"texture": ExtResource("47_6fh4u")
}, {
"duration": 1.0,
"texture": ExtResource("48_5t2tt")
}, {
"duration": 1.0,
"texture": ExtResource("49_12cxf")
}, {
"duration": 1.0,
"texture": ExtResource("50_fpmop")
}, {
"duration": 1.0,
"texture": ExtResource("51_rmcxj")
}, {
"duration": 1.0,
"texture": ExtResource("52_xaxjq")
}, {
"duration": 1.0,
"texture": ExtResource("53_qv8ng")
}, {
"duration": 1.0,
"texture": ExtResource("54_aglhv")
}, {
"duration": 1.0,
"texture": ExtResource("55_xpsfs")
}, {
"duration": 1.0,
"texture": ExtResource("56_4f6xx")
}, {
"duration": 1.0,
"texture": ExtResource("57_dtg0u")
}, {
"duration": 1.0,
"texture": ExtResource("58_kpcml")
}, {
"duration": 1.0,
"texture": ExtResource("59_pohy0")
}, {
"duration": 1.0,
"texture": ExtResource("60_mxevj")
}, {
"duration": 1.0,
"texture": ExtResource("61_vpwv6")
}, {
"duration": 1.0,
"texture": ExtResource("62_k4r55")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_53xo4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CenterContainer/IntroTextLabel:theme_override_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WaterNode:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CenterContainer/ExplanationTextLabel:theme_override_colors/font_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_wtpf8"]
resource_name = "intro"
length = 25.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CenterContainer/IntroTextLabel:theme_override_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(4.5333333, 8.066667, 18.033333, 21.033333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WaterNode:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 3.99),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CenterContainer/ExplanationTextLabel:theme_override_colors/font_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(21.066668, 24.933332),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k7lgf"]
_data = {
&"RESET": SubResource("Animation_53xo4"),
&"intro": SubResource("Animation_wtpf8")
}

[node name="IntroScene" type="Control" unique_id=204848739]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7osnm")

[node name="BackgroundSprite" type="Sprite2D" parent="." unique_id=1272565458]
position = Vector2(645.5, 364.75)
scale = Vector2(18.442858, 9.74)
texture = ExtResource("2_hute1")

[node name="WaterNode" type="Node2D" parent="." unique_id=1692165618]
modulate = Color(1, 1, 1, 0)

[node name="Water1" type="AnimatedSprite2D" parent="WaterNode" unique_id=1263457276]
position = Vector2(255, 257)
sprite_frames = SubResource("SpriteFrames_c5sff")

[node name="Water2" type="AnimatedSprite2D" parent="WaterNode" unique_id=820230677]
position = Vector2(764, 256)
sprite_frames = SubResource("SpriteFrames_c5sff")

[node name="Water3" type="AnimatedSprite2D" parent="WaterNode" unique_id=737726106]
position = Vector2(1275, 254)
sprite_frames = SubResource("SpriteFrames_c5sff")

[node name="Water4" type="AnimatedSprite2D" parent="WaterNode" unique_id=1451122662]
position = Vector2(256, 768)
sprite_frames = SubResource("SpriteFrames_c5sff")

[node name="Water5" type="AnimatedSprite2D" parent="WaterNode" unique_id=1248928793]
position = Vector2(765, 767)
sprite_frames = SubResource("SpriteFrames_c5sff")

[node name="Water6" type="AnimatedSprite2D" parent="WaterNode" unique_id=702006377]
position = Vector2(1276, 764)
sprite_frames = SubResource("SpriteFrames_c5sff")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=545277676]
libraries/ = SubResource("AnimationLibrary_k7lgf")

[node name="CenterContainer" type="CenterContainer" parent="." unique_id=1577981918]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="IntroTextLabel" type="Label" parent="CenterContainer" unique_id=765078485]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 0)
theme_override_font_sizes/font_size = 20
text = "GREETIN'S MATE"
horizontal_alignment = 1

[node name="ExplanationTextLabel" type="Label" parent="CenterContainer" unique_id=1544109390]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 0)
theme_override_font_sizes/font_size = 20
text = "Ayyyyyt baby"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=1769149593]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="SkipLabel" type="Label" parent="MarginContainer" unique_id=820426828]
visible = false
layout_mode = 2
text = "Press any button to continue..."

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
